        Reviewed by Adam Roben.

https://bugs.webkit.org/show_bug.cgi?id=18488
        FastMalloc doesn't release thread-specific data on Windows

        * wtf/ThreadingWin.cpp:
        (WTF::threadMapMutex): (WTF::initializeThreading): Call threadMapMutex once to initialize the static safely.
        (WTF::ThreadFunctionInvocation::ThreadFunctionInvocation): Added a structure to wrap thread entry point and arguments.
        (WTF::wtfThreadEntryPoint): Make sure to end all WTF threads with pthread_exit(), to give pthreads-win32 a chance to call
        destructors of thread-specific data.
        (WTF::createThread): Use _beginthreadex instead of CreateThread, because MSDN says so. Also removed a call to CreateEvent,
        for which I could see no reason at all.



Canonical link: https://commits.webkit.org/25399@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@31864 268f45cc-cd09-0410-ab3c-d52691b4dbfc